syntax = "proto3";

import "google/protobuf/wrappers.proto";

package lol_bridge;

message ProcessReadReq {
    bytes message = 1;
}
message ProcessReadRep {
    bytes message = 1;
}
message ProcessWriteReq {
    bytes message = 1;
    uint64 apply_index = 2;
}
message ProcessWriteRep {
    bytes message = 1;
    google.protobuf.BytesValue snapshot = 2;
}
message InstallSnapshotReq {
    google.protobuf.BytesValue snapshot = 1;
    uint64 apply_index = 2;
}
message InstallSnapshotRep {}
message FoldSnapshotReq {
    google.protobuf.BytesValue snapshot = 1;
    repeated bytes messages = 2;
}
message FoldSnapshotRep {
    bytes snapshot = 1;
}
service AppBridge {
    rpc ProcessRead (ProcessReadReq) returns (ProcessReadRep);
    rpc ProcessWrite (ProcessWriteReq) returns (ProcessWriteRep);
    rpc InstallSnapshot (InstallSnapshotReq) returns (InstallSnapshotRep);
    rpc FoldSnapshot (FoldSnapshotReq) returns (FoldSnapshotRep);
}